--- a/partials/projects/description.html
+++ b/partials/projects/description.html
@@ -18,7 +18,14 @@
 			<div class="form-group" show-errors>
 				<label for="input-name" class="col-sm-2 control-label">Nom</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" id="input-name" name="name" ng-model="project.name" required placeholder="Exemple: Réduction des Risques Laos">
+					<input type="text"
+						   class="form-control"
+						   id="input-name"
+						   name="name"
+						   ng-model="project.name"
+						   placeholder="Exemple: Réduction des Risques Laos"
+						   required />
+					
 					<p class="help-block" ng-if="projectForm.name.$error.required">
 						Ce champ est obligatoire
 					</p>
