Implement first version of project planning form

--- a/css/app.css
+++ b/css/app.css
@@ -68,3 +68,14 @@ textarea {
 .form-group.has-error .help-block {
   display: block;
 }
+
+.invert.input-group .form-control {
+	border-radius: 4px;
+	border-top-left-radius: 0;
+	border-bottom-left-radius: 0;
+}
+
+.input-group-btn.square button {
+	border-radius: 0;
+	border-right-width: 0;
+}
