--- a/partials/projects/planning-list.html
+++ b/partials/projects/planning-list.html
@@ -7,8 +7,8 @@
 		
 		<ol class="breadcrumb">
 			<li><a href="#projects">Projets</a></li>
-			<li ng-show="project._id"><a href="#projects/{{project._id}}">{{project.name}}</a></li>
-			<li class="active">Liste des centres</li>
+			<li><a href="#projects/{{project._id}}">{{project.name}}</a></li>
+			<li class="active">Liste des indicateurs</li>
 		</ol>
 
 		<table class="table table-bordered table-stripped table-condensed">
