--- a/partials/indicators/list.html
+++ b/partials/indicators/list.html
@@ -11,13 +11,13 @@
 				{{themes[themeId].name || 'Sans thématique'}}
 			</div>
 
-			<div class="indicator-level-2" ng-repeat="(typeId, indicators) in indicatorByTypes" ng-show="open1">
+			<div class="indicator-level-2" ng-repeat="(typeId, indicators) in indicatorByTypes" ng-if="open1">
 				<div class="indicator-header" ng-click="open2 = !open2">
 					<i class="fa fa-plus-circle" ng-class="{'fa-plus-circle': !open2, 'fa-minus-circle': open2}"></i>
 					{{types[typeId].name || 'Sans type'}}
 				</div>
 
-				<div class="indicator-level-3" ng-repeat="indicator in indicators" ng-show="open2">
+				<div class="indicator-level-3" ng-repeat="indicator in indicators" ng-if="open2">
 					<span class="color" ng-class="{green: indicator.standard}"></span>
 					<span class="name">{{indicator.name}} ({{indicator.usage}} utilisations)</span>
 					
