--- a/partials/indicators/theme-list.html
+++ b/partials/indicators/theme-list.html
@@ -5,7 +5,12 @@
 
 	<div class="col-md-10">
 
-		<table class="table table-stripped table-bordered table-condensed" ng-show="themes">
+		<ol class="breadcrumb">
+			<li><a href="#indicators">Indicateurs</a></li>
+			<li class="active">Liste des thématiques</li>
+		</ol>
+
+		<table class="table table-stripped table-bordered table-condensed">
 			<thead>
 				<tr>
 					<th>Nom</th>
@@ -22,7 +27,7 @@
 				<tr>
 					<td colspan="3">
 						<div class="input-group input-group-sm" style="width: 100%">
-							<input type="text" class="form-control" ng-model="newTheme" placeholder="Nom du nouveau thème">
+							<input type="text" class="form-control" ng-model="newTheme" placeholder="Nom du nouveau thème" ng-enter="add()">
 							<span class="input-group-btn">
 								<button class="btn btn-default" ng-click="add()">Ajouter</button>
 							</span>
