--- a/partials/indicators/type-list.html
+++ b/partials/indicators/type-list.html
@@ -4,8 +4,12 @@
 	</div>
 
 	<div class="col-md-10">
+		<ol class="breadcrumb">
+			<li><a href="#indicators">Indicateurs</a></li>
+			<li class="active">Liste des types</li>
+		</ol>
 
-		<table class="table table-stripped table-bordered table-condensed" ng-show="types">
+		<table class="table table-stripped table-bordered table-condensed">
 			<thead>
 				<tr>
 					<th>Nom</th>
@@ -22,7 +26,7 @@
 				<tr>
 					<td colspan="3">
 						<div class="input-group input-group-sm" style="width: 100%">
-							<input type="text" class="form-control" ng-model="newType" placeholder="Nom du nouveau type">
+							<input type="text" class="form-control" ng-model="newType" placeholder="Nom du nouveau type" ng-enter="add()">
 						    <span class="input-group-btn">
 								<button class="btn btn-default" ng-click="add()">Ajouter</button>
 							</span>
