--- a/partials/projects/list.html
+++ b/partials/projects/list.html
@@ -18,7 +18,7 @@
 			<td>{{project.begin}}</td>
 			<td>{{project.end}}</td>
 			<td>
-				<a href="#projects/{{project._id}}" class="btn btn-default btn-xs" ng-click="delete(centerId)">
+				<a href="#projects/{{project._id}}" class="btn btn-default btn-xs">
 					Modifier
 				</a>
 			</td>
