--- a/partials/sync.html
+++ b/partials/sync.html
@@ -1,6 +1,14 @@
 
 
+Ici on peut voir si on utilise l'API ou si on est sur indexedDB.
+En gros on a trois modes de fonctionnement:
 
+indexed db off, indexed db on, et remote.
+
+
+
+
+<!-- 
 On a trois booleans
 
 - 
@@ -32,4 +40,4 @@ On a trois booleans
 		<td></td>
 		<td></td>
 	</tr>
-</table>
+</table> -->
