--- a/partials/projects/logical-frame.html
+++ b/partials/projects/logical-frame.html
@@ -11,7 +11,242 @@
 			<li class="active">Cadre logique</li>
 		</ol>
 
-		Here comes the logical frame
+		<form class="form-horizontal" role="form">
+
+			<fieldset>
+				<legend>Objectif global</legend>
+				
+				<div class="form-group">
+					<label for="input-name" class="col-sm-2 control-label">Logique d'intervention</label>
+					<div class="col-sm-10">
+						<textarea class="form-control" placeholder="Description de la contribution du projet aux objectifs (impact) d'une politique ou d'un programme"></textarea>
+					</div>
+				</div>
+
+				<div class="form-group">
+					<label for="input-name" class="col-sm-2 control-label">Indicateurs</label>
+					<div class="col-sm-10">
+						<ul>
+							<li>Neonatal mortality rate</li>
+							<li>Maternal mortality ratio</li>
+							<li><a href="#">Ajouter un indicateur</a></li>
+						</ul>
+					</div>
+				</div>
+			
+			</fieldset>
+
+			<fieldset>
+				<legend>Objectifs spécifiques</legend>
+
+				<div class="well">
+					<div class="form-group">
+						<label for="input-name" class="col-sm-2 control-label">Code</label>
+						<div class="col-sm-10">
+							<p class="form-control-static">OS.1</p>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label for="input-name" class="col-sm-2 control-label">Logique d'intervention</label>
+						<div class="col-sm-10">
+							<textarea class="form-control" placeholder="Description des avantages directs destinés au(x) groupe(s) cible(s)"></textarea>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label for="input-name" class="col-sm-2 control-label">Hypothèses</label>
+						<div class="col-sm-10">
+							<textarea class="form-control" placeholder="Si l'objectif spécifique est atteint, quelles hypothèses doivent être confirmées pour atteindre l'objectif général?"></textarea>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label for="input-name" class="col-sm-2 control-label">Indicateurs</label>
+						<div class="col-sm-10">
+							<ul>
+								<li>Among women age 15-49 who have heard about circumcision, percentage who believe practice should be continued</li>
+								<li>Among women age 15-49 with at least one living daughter, percentage with at least one daughter circumcised</li>
+								<li>Among girls born in the last 12 months, percentage who have been circumcised</li>
+								<li>Among girls born in the last 12 months and who have been circumcised, percentage with vagina sewn closed</li>
+								<li><a href="#">Ajouter un indicateur</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+
+				<button class="btn btn-default">Ajouter un objectif spécifique</button>
+			</fieldset>
+
+			<br/><br/>
+	
+
+			<fieldset>
+				<legend>Résultats attendus</legend>
+
+				<div class="well">
+					<div class="form-group">
+						<label for="input-name" class="col-sm-2 control-label">Code</label>
+						<div class="col-sm-10">
+							<p class="form-control-static">R.1</p>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label for="input-name" class="col-sm-2 control-label">Description</label>
+						<div class="col-sm-10">
+							<textarea class="form-control" placeholder="Produit ou service tangibles apportés par le projet.">The population in Zone 5 of Afar region (around 205,000 individuals) are aware of the harmful consequences of female genital mutilation.</textarea>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label for="input-name" class="col-sm-2 control-label">Hypothèses</label>
+						<div class="col-sm-10">
+							<textarea class="form-control" placeholder="Si le resultat est obtenu, quelles hypothèses doivent être confirmées pour atteindre l'objectif spécifique?">The awareness of the population concerns all the types of female genital mutilation, including the least severe forms.</textarea>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label for="input-name" class="col-sm-2 control-label">Indicateurs</label>
+						<div class="col-sm-10">
+							<ul>
+								<li>
+									Percentage of population that knows at least three complications / consequences of female
+									genital mutilation
+								</li>
+								<li>
+									Among women age 15-49 having received antenatal care from a skilled provider during their
+									last pregnancy, percentage who received information on the risks and the consequences of
+									genital mutilation on a newborn girl
+								</li>
+								<li>
+									Among women age 15-49 who gave birth to a girl in a health facility, percentage who received
+									information on the risks and the consequences of genital mutilation on their newborn girl
+								</li>
+								<li><a href="#">Ajouter un indicateur</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="well">
+					<div class="form-group">
+						<label for="input-name" class="col-sm-2 control-label">Code</label>
+						<div class="col-sm-10">
+							<p class="form-control-static">R.2</p>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label for="input-name" class="col-sm-2 control-label">Description</label>
+						<div class="col-sm-10">
+							<textarea class="form-control" placeholder="Produit ou service tangibles apportés par le projet.">Prevention and management of complications and consequences of female genital mutilation is integrated in the continuum of care provided in 57 health facilities in Zone 5 of Afar region.</textarea>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label for="input-name" class="col-sm-2 control-label">Hypothèses</label>
+						<div class="col-sm-10">
+							<textarea class="form-control" placeholder="Si le resultat est obtenu, quelles hypothèses doivent être confirmées pour atteindre l'objectif spécifique?">Health facilities are functional and there is no disruption in the continuum of care.</textarea>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label for="input-name" class="col-sm-2 control-label">Indicateurs</label>
+						<div class="col-sm-10">
+							<ul>
+								<li>
+									Among women age 15-49 with vagina sewn closed (type III FGM) having received antenatal care
+									from a skilled provider during their last pregnancy, percentage who got de-infibulated during
+									the 2nd quarter
+								</li>
+								<li>
+									Percentage of antenatal consultations conducted in accordance with WHO recommendations related
+									to female genital mutilation.
+								</li>
+								<li><a href="#">Ajouter un indicateur</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+
+			</fieldset>
+		</form>
+
+		
+
+		<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+		<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+		<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><hr/>
+	
+
+
+
+
+		
+
+
+		<table class="table table-bordered">
+			<thead>
+				<tr>
+					<th></th>
+					<th>Intervention logic</th>
+					<th>Objectively verifiable indicators of achievement</th>
+					<th>Assumptions</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td rowspan="1">
+						Objectifs globaux
+					</td>
+					<td contenteditable>
+						To contribute to the reduction of neonatal mortality and maternal mortality in Afar region of Ethiopia by the next Ethiopia Demographic and Health Survey (EDHS)
+					</td>
+					<td>
+						<ul>
+							<li>Neonatal mortality rate</li>
+							<li>Maternal mortality ratio</li>
+							<li><a href="#">Ajouter un indicateur</a></li>
+						</ul>
+					</td>
+					<td contenteditable>
+						N/A
+					</td>
+				</tr>
+
+				<tr>
+					<td rowspan="1">
+						Objectifs Spécifiques
+					</td>
+					<td contenteditable>
+						
+					</td>
+					<td>
+						<ul>
+							<li>Among women age 15-49 who have heard about circumcision, percentage who believe practice should be continued</li>
+							<li>Among women age15-49 with at least one living daughter, percentage with at least one daughter circumcised</li>
+							<li>Among girls born in the last 12 months, percentage who have been circumcised</li>
+							<li>Among girls born in the last 12 months and who have been circumcised, percentage with vagina sewn closed</li>
+							<li><a href="#">Ajouter un indicateur</a></li>
+						</ul>
+					</td>
+					<td contenteditable>
+						There is low risk for lies or false declarations during surveys.
+						There is low to medium risk for the practice of female genital mutilation to continue through less severe forms, in secret and/or in neighbouring areas.
+						The Afar region is homogeneous so that baseline values calculated for the whole of the region (EDHS 2005) are applicable to the sole Zone 5.
+					</td>
+				</tr>
+				<tr>
+
+
+
+			</tbody>
+		</table>
+
+
+
 	
 
 	</div>
