--- a/partials/projects/planning-list.html
+++ b/partials/projects/planning-list.html
@@ -34,7 +34,6 @@
 					</div>
 				</div>
 
-
 				<div class="form-group" show-errors>
 					<label for="periodicity-input" class="col-sm-2 control-label">Périodicité</label>
 					<div class="col-sm-10">
@@ -120,6 +119,49 @@
 
 			<fieldset>
 				<legend>Données à saisir et méthode de calcul</legend>
+
+
+				
+				<div class="indicator-level-1">
+					<div class="indicator-header">
+						<i class="fa fa-plus-circle" ng-class="{'fa-plus-circle': !open1, 'fa-minus-circle': open1}"></i>
+						Unmet need for family planning
+					</div>
+
+
+					<div class="indicator-level-2">
+						<div class="indicator-header" ng-click="open2 = !open2">
+							<i class="fa fa-plus-circle" ng-class="{'fa-plus-circle': !open2, 'fa-minus-circle': open2}"></i>
+							Number of women in need of family planning
+						</div>
+
+						<div class="indicator-level-3">
+							Population
+						</div>
+					</div>
+
+
+					<div class="indicator-level-2">
+						<div class="indicator-header" ng-click="open2 = !open2">
+							<i class="fa fa-plus-circle" ng-class="{'fa-plus-circle': !open2, 'fa-minus-circle': open2}"></i>
+							Number of fertile women currently married or living in union
+						</div>
+
+						<div class="indicator-level-3">
+							Population
+						</div>
+					</div>
+				</div>
+
+
+
+
+
+
+
+
+
+
 
 				<table class="table table-bordered table-stripped table-condensed">
 					<thead>
